JSON rules support for multiple attributes within a when condition (#960)
* WIP

* WIP

* WIP

* Update or.json